#Solution to color issue
Problem: The system is using css to control the highlight color,
however when user’s annotation is overlapping the annotation by others.
The color will mixed-up.
Solution: Use the light red as the universal color for highlight
instead of using light-blue(user’s own) or yellow(universal) when
mouseover.

--- a/silsannotate/static/version8b/css/annotator.css
+++ b/silsannotate/static/version8b/css/annotator.css
@@ -58,20 +58,24 @@ to fix the "flicker" of different yellows that shows up as CSS files load
 	  /*background: rgba(108, 255, 255, 0.1); */
 	  /*background: rgba(189, 238, 255, 1);*/
 	  background: rgba(214, 244, 255, 1);
+		text-decoration: none;
 }
 
 .annotator-wrapper .annotator-hl.my-annotation {
   	background: rgba(214, 244, 255, 1);
+	text-decoration: none;
 }
 
 .annotation.active,
 .annotator-wrapper .annotator-hl.active {
-  	background: rgba(255, 222, 222, 0.8);
+  	background: rgba(255, 222, 222, 0.8) !important;
+	text-decoration: underline;
 }
 
 .annotator-wrapper .annotator-hl.my-annotation.active,
 .annotation.my-annotation.active {
   	background: rgba(171, 208, 252, 1);
+	text-decoration: underline;
 }
 
 /* my annotation's take precedence over others' annotations
